[project]
name = "super-develop-agents"
version = "1.0.0"
description = "超级智能体开发平台 — 用智能体开发智能体，让 AI 自己构建 AI。"
authors = [
    { name="Developer", email="developer@example.com" }
]
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.2.4",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "aiosqlite>=0.20.0",
    "langchain>=1.3.4",
    "langchain-anthropic>=1.4.4",
    "langchain-core>=1.4.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "httpx>=0.28.1",
    "sse-starlette>=3.4.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
    "mypy>=2.1.0",
    "ruff>=0.15.16",
    "typing-extensions>=4.15.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 120
target-version = "py311"
fix = true

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "TCH", "ARG",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG002", "B017", "S106"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"